--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PALAZZO MOLTENI TOKYO | Virtual Tour Suite</title>
-    
     <style>
         /* --- BRANDING & FONTS --- */
         @import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&display=swap');
@@ -15,6 +15,7 @@
 
         body, html { margin: 0; padding: 0; width: 100%; height: 100%; background: #fff; font-family: var(--main-font); overflow: hidden; color: #000; -webkit-font-smoothing: antialiased; }
 
+        /* --- HEADER & FOOTER --- */
         header { position: fixed; top: 0; width: 100%; height: 85px; background: rgba(255,255,255,0.95); backdrop-filter: blur(15px); z-index: 2000; border-bottom: 1px solid #eee; display: flex; flex-direction: column; justify-content: center; align-items: center; }
         .brand-title { font-family: var(--main-font); font-size: 24px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; margin-top: 5px; }
         .location { font-size: 8px; letter-spacing: 0.5em; color: var(--grey); text-transform: uppercase; margin-top: 8px; margin-bottom: 5px; }
@@ -25,8 +26,11 @@
         .floor-num { display: block; font-family: var(--main-font); font-size: 24px; font-weight: 600; }
         .floor-label { display: block; font-size: 8px; text-transform: uppercase; letter-spacing: 0.1em; color: #888; }
 
+        /* --- VIEWPORT --- */
         #viewport { width: 100%; height: 100%; padding: 85px 0 85px 0; box-sizing: border-box; overflow-y: auto; overflow-x: hidden; position: relative; z-index: 100; transition: 0.5s; touch-action: pan-y; }
-        body.pinning-mode-active #viewport { width: calc(100% - var(--panel-w)); transform: translateX(var(--panel-w)); }
+        @media screen and (min-width: 769px) {
+            body.pinning-mode-active #viewport { width: calc(100% - var(--panel-w)); transform: translateX(var(--panel-w)); }
+        }
 
         .area-nav { display: flex; gap: 35px; padding: 25px 40px; overflow-x: auto; background: #fff; border-bottom: 1px solid #f2f2f2; scrollbar-width: none; position: sticky; top: 0; z-index: 500; }
         .area-nav::-webkit-scrollbar { display: none; }
@@ -37,12 +41,15 @@
         .nav-arrow:hover { color: rgba(0,0,0,1); background: rgba(255,255,255,0.8); }
         .arrow-left { left: 25px; } .arrow-right { right: 25px; }
 
-        .mol-breakout-wrap { width: 120% !important; margin-left: -10% !important; position: relative; left: 0; text-align: center; line-height: 0; font-size: 0; }
+        /* --- IMAGE BREAKOUT (120%) --- */
+        .scene-wrap { width: 100%; position: relative; line-height: 0; font-size: 0; }
+        .mol-breakout-wrap { width: 120%; margin-left: -10%; position: relative; left: 0; text-align: center; line-height: 0; font-size: 0; }
         .mol-breakout-wrap img { width: 100%; height: auto; display: block; border-radius: 0; border: none; }
 
+        /* --- PIN DESIGN ◎ --- */
         .mol-hs { position: absolute; transform: translate(-50%, -50%); text-decoration: none; z-index: 10; display: block; }
         .mol-dot-outer { width: 12px; height: 12px; background: rgba(255,255,255,0.2); border: 1px solid #fff; border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: 0.3s; }
-        .mol-dot-inner { width: 4px; height: 4px; border: 1px solid #fff; border-radius: 50%; }
+        .mol-dot-inner { width: 4px; height: 4px; border: 1px solid #fff; border-radius: 50%; background: transparent; }
         .type-detail .mol-dot-outer, .type-detail .mol-dot-inner { border-radius: 0; }
         .mol-card { position: absolute; bottom: 24px; left: 50%; transform: translateX(-50%); background: #fff; padding: 12px 18px; border-radius: 2px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); width: max-content; max-width: 220px; opacity: 0; visibility: hidden; transition: 0.3s; text-align: center; line-height: 1.5; color: #000; }
         .mol-card strong { font-family: var(--main-font); font-size: 12px; font-weight: 600; display: block; text-transform: uppercase; margin-bottom: 4px; }
@@ -50,6 +57,7 @@
         .mol-hs:hover .mol-card, .mol-hs:active .mol-card { opacity: 1; visibility: visible; bottom: 30px; }
         .mol-hs:hover .mol-dot-outer { background: rgba(255,255,255,0.6); transform: scale(1.1); }
 
+        /* --- DESIGNER PANEL --- */
         #ui-mode-toggle { position: fixed; top: 20px; right: 20px; z-index: 10000; display: flex; background: rgba(255,255,255,0.9); padding: 4px; border: 1px solid var(--border); border-radius: 2px; }
         #ui-mode-toggle button { border: none; background: none; padding: 8px 18px; font-size: 10px; font-weight: bold; cursor: pointer; font-family: var(--main-font); }
         #ui-mode-toggle button.active { background: #000; color: #fff; }
@@ -67,20 +75,36 @@
         .btn-accent { background: var(--accent); color: #fff; }
         #export-output { display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 20000; background: white; padding: 40px; box-sizing: border-box; }
 
+        /* --- MOBILE OPTIMIZATION (FINAL FIX) --- */
         @media screen and (max-width: 768px) {
             #ui-mode-toggle, .nav-arrow, #admin-panel, .location { display: none !important; }
             .brand-title { font-size: 18px; letter-spacing: 0.12em; font-weight: 600; }
-            .mol-breakout-wrap { width: 100% !important; margin: 0 !important; }
-            .mol-breakout-wrap img { width: 100% !important; height: auto !important; max-width: 100vw !important; }
+            /* スマホでは120%幅をリセットして画面にフィットさせる */
+            .mol-breakout-wrap { 
+                width: 100% !important; 
+                margin: 0 !important; 
+                display: block !important; 
+                left: 0 !important; 
+            }
+            .mol-breakout-wrap img { 
+                width: 100% !important; 
+                height: auto !important; 
+                max-width: 100vw !important; 
+            }
+            #viewport { 
+                width: 100% !important; 
+                transform: none !important; 
+                padding: 85px 0 85px 0 !important;
+            }
         }
     </style>
 
     <script>
-        /* --- CORE LOGIC v33 --- */
+        /* --- CORE APP LOGIC v36 --- */
         const API_KEY = "ddb8687d0558d57aad3e6155ccaab2e2";
-        const DB_NAME = "pmt_master_v33";
+        const DB_NAME = "pmt_master_v36";
 
-        // 封入データ
+        // 【封入データ】現在までの全てのエリア情報
         let store = {"B1F":[{"id":"a1766734702128","name":"A","img":"https://i.ibb.co/tMMctTzh/Tokyo-Palazzo-Molteni-03.jpg","pins":[{"id":"p1766734744429","x":55.48,"y":59.78,"title":"CINNAMON","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734749296","x":80.06,"y":70.53,"title":"MARTEEN","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734770297","x":24.14,"y":50.1,"title":"アート","link":"","sub":"アート","type":"detail"},{"id":"p1766734776811","x":60.32,"y":45.34,"title":"アート","link":"","sub":"アート","type":"detail"}]},{"id":"a1766734782946","name":"B","img":"https://i.ibb.co/JjL08Z85/Tokyo-MGL0240-2025-HR-1.jpg","pins":[{"id":"p1766734808779","x":55.67,"y":69.64,"title":"ALBERT","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734813196","x":21.08,"y":64.36,"title":"SWAY","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"}]}],"1F":[],"2F":[{"id":"a1766742720802","name":"A","img":"https://i.ibb.co/ZznLmDKS/Tokyo-Palazzo-Molteni-04.jpg","pins":[{"id":"p1766742763402","x":32.75,"y":59.92,"title":"mateo","link":"https://www.molteni.it/jp/","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766742778369","x":57.8,"y":55.35,"title":"D.150.3","link":"https://www.molteni.it/jp/","sub":"商品詳細はこちら >","type":"product"}]},{"id":"a1766742784668","name":"B","img":"https://i.ibb.co/Zpsy2jCm/682ee4fb185ff-Tokyo-MGL0157-2025-HR.jpg","pins":[{"id":"p1766742829619","x":37.9,"y":48.01,"title":"GLISSMASTER","link":"https://www.molteni.it/jp/","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766742845785","x":16.3,"y":62.2,"title":"DUE FOLIE","link":"https://www.molteni.it/jp/","sub":"商品詳細はこちら >","type":"product"}]}],"3F":[{"id":"a1766734621445","name":"A","img":"https://i.ibb.co/nMKmfKdM/682ee5105f756-Molteni-C-Palazzo-Molteni-Tokyo-02.jpg","pins":[{"id":"p1766734648580","x":35.16,"y":39.92,"title":"ARIAL","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734655028","x":57.58,"y":38.47,"title":"505up","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734663812","x":30.19,"y":82.63,"title":"AUGUSTO","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734680242","x":15.03,"y":45.35,"title":"エコスマート","link":"","sub":"エコスマート","type":"detail"},{"id":"p1766734684899","x":82.42,"y":45.61,"title":"アート","link":"","sub":"アート","type":"detail"}]},{"id":"a1766739087337","name":"B","img":"https://i.ibb.co/0pWmGHTM/Tokyo-MGL0117-2025-HR.jpg","pins":[]}]};
 
         let floor = '1F';
@@ -89,6 +113,7 @@
         let isPinning = false;
         let touchX = 0;
 
+        /* --- GLOBAL HANDLERS --- */
         window.changeAppMode = function(m) {
             if (window.innerWidth <= 768) return;
             mode = m; isPinning = false;
@@ -142,7 +167,7 @@
             nav.innerHTML = '';
             const list = store[floor];
             if(list.length === 0) {
-                document.getElementById('scene-display').innerHTML = '<div style="padding:100px; text-align:center; color:#ccc;">Select Floor to Begin.</div>';
+                document.getElementById('scene-display').innerHTML = '<div style="padding:100px; text-align:center; color:#ccc;">Palazzo Molteni Tokyo Suite.</div>';
                 document.getElementById('edit-tools').style.display = 'none';
                 return;
             }
@@ -231,7 +256,7 @@
 
         window.commitChanges = function(silent = false) {
             localStorage.setItem(DB_NAME, JSON.stringify(store));
-            if(!silent) alert("Progress saved locally.");
+            if(!silent) alert("Progress saved.");
         };
 
         window.updateImageManual = function(v) {
@@ -268,16 +293,27 @@
                 if(Math.abs(diff) > 80) window.navigateArea(diff > 0 ? -1 : 1);
             });
         });
+
+        /* API UPLOAD HANDLER */
+        window.handleFileUpload = async (e) => {
+            const f = e.target.files[0]; if(!f) return;
+            const fd = new FormData(); fd.append("image", f);
+            try {
+                const res = await fetch(`https://api.imgbb.com/1/upload?key=${API_KEY}`, { method: "POST", body: fd });
+                const j = await res.json();
+                if(j.success) { window.updateImageManual(j.data.url); document.getElementById('manual-url').value = j.data.url; }
+            } catch(err) { alert("Upload Fail"); }
+        };
     </script>
 </head>
 
-<body id="app-body" class="pinning-mode-active">
+<body id="app-body">
 
 <div id="admin-overlay" onclick="closeAdmin()"></div>
 
 <div id="ui-mode-toggle">
-    <button id="mode-view" class="" onclick="changeAppMode('view')">VIEW</button>
-    <button id="mode-edit" onclick="changeAppMode('edit')" class="active">DESIGNER</button>
+    <button id="mode-view" class="active" onclick="changeAppMode('view')">VIEW</button>
+    <button id="mode-edit" onclick="changeAppMode('edit')">DESIGNER</button>
 </div>
 
 <header>
@@ -288,20 +324,20 @@
 <div class="nav-arrow arrow-left" onclick="navigateArea(-1)"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg></div>
 <div class="nav-arrow arrow-right" onclick="navigateArea(1)"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg></div>
 
-<div id="admin-panel" class="open">
+<div id="admin-panel">
     <div style="font-weight:900; letter-spacing:2px; font-size:14px; margin-bottom:40px; border-bottom:2px solid #000; padding-bottom:15px; text-transform:uppercase;">Administration</div>
     <div class="admin-section">
         <span class="admin-label">01. Area Management</span>
         <input type="text" id="new-area-name" placeholder="Area Name">
-        <button class="btn btn-black" onclick="handleCreateArea()">Add Area to <span id="admin-f-label">2F</span></button>
+        <button class="btn btn-black" onclick="handleCreateArea()">Add Area to <span id="admin-f-label">1F</span></button>
     </div>
-    <div id="edit-tools" style="display: block;">
+    <div id="edit-tools" style="display:none;">
         <div class="admin-section">
             <span class="admin-label">02. Media Content</span>
-            <input type="file" id="file-input" accept="image/*">
+            <input type="file" id="file-input" accept="image/*" onchange="handleFileUpload(event)">
             <input type="text" id="manual-url" placeholder="Paste Image URL" onchange="updateImageManual(this.value)">
             <span class="admin-label" style="margin-top:25px;">03. Interaction Settings</span>
-            <div id="pin-switch-btn" class="pin-switch active" onclick="handlePinToggle()">Placement Mode: ACTIVE</div>
+            <div id="pin-switch-btn" class="pin-switch" onclick="handlePinToggle()">Placement Mode: OFF</div>
             <select id="marker-type">
                 <option value="product">Product Link (◎)</option>
                 <option value="detail">Interior Detail (▣)</option>
@@ -316,35 +352,22 @@
 <div id="export-output">
     <div style="max-width: 800px; margin: auto;">
         <h2 style="font-family: var(--main-font); font-weight: 600;">Final Export</h2>
-        <textarea id="export-text" readonly="" style="height: 400px; font-size: 10px; width: 100%;"></textarea>
+        <textarea id="export-text" readonly style="height: 400px; font-size: 10px; width: 100%;"></textarea>
         <button class="btn btn-black" onclick="document.getElementById('export-output').style.display='none'">Back to App</button>
     </div>
 </div>
 
 <div id="viewport" onclick="handleViewportClick(event)">
-    <div class="area-nav" id="area-nav"><div class="area-item" id="nav-a1766742720802">A</div><div class="area-item active" id="nav-a1766742784668">B</div></div>
-    <div id="scene-display"><div class="mol-breakout-wrap" id="scene-stage"><img src="https://i.ibb.co/Zpsy2jCm/682ee4fb185ff-Tokyo-MGL0157-2025-HR.jpg"><div class="mol-hs " style="top:48.01%; left:37.9%;" onclick="handlePinInteraction(event, 'p1766742829619')"><div class="edit-x" onclick="handleDeletePin(event,'p1766742829619')">×</div><span class="mol-dot-outer"><span class="mol-dot-inner"></span></span><a href="https://www.molteni.it/jp/" target="_blank" rel="noopener noreferrer" class="mol-card" ontouchstart=""><strong>GLISSMASTER</strong><span>商品詳細はこちら &gt;</span></a></div><div class="mol-hs " style="top:62.2%; left:16.3%;" onclick="handlePinInteraction(event, 'p1766742845785')"><div class="edit-x" onclick="handleDeletePin(event,'p1766742845785')">×</div><span class="mol-dot-outer"><span class="mol-dot-inner"></span></span><a href="https://www.molteni.it/jp/" target="_blank" rel="noopener noreferrer" class="mol-card" ontouchstart=""><strong>DUE FOLIE</strong><span>商品詳細はこちら &gt;</span></a></div></div></div>
+    <div class="area-nav" id="area-nav"></div>
+    <div id="scene-display"></div>
 </div>
 
 <footer>
     <div class="floor-btn" onclick="handleFloorChange('B1F')" id="f-B1F"><span class="floor-num">B1</span><span class="floor-label">Basement</span></div>
-    <div class="floor-btn" onclick="handleFloorChange('1F')" id="f-1F"><span class="floor-num">1F</span><span class="floor-label">Ground</span></div>
-    <div class="floor-btn active" onclick="handleFloorChange('2F')" id="f-2F"><span class="floor-num">2F</span><span class="floor-label">Living</span></div>
+    <div class="floor-btn active" onclick="handleFloorChange('1F')" id="f-1F"><span class="floor-num">1F</span><span class="floor-label">Ground</span></div>
+    <div class="floor-btn" onclick="handleFloorChange('2F')" id="f-2F"><span class="floor-num">2F</span><span class="floor-label">Living</span></div>
     <div class="floor-btn" onclick="handleFloorChange('3F')" id="f-3F"><span class="floor-num">3F</span><span class="floor-label">Apartment</span></div>
 </footer>
 
-<script>
-    /* API UPLOAD HANDLER */
-    document.getElementById('file-input').onchange = async (e) => {
-        const f = e.target.files[0]; if(!f) return;
-        const fd = new FormData(); fd.append("image", f);
-        try {
-            const res = await fetch(`https://api.imgbb.com/1/upload?key=${API_KEY}`, { method: "POST", body: fd });
-            const j = await res.json();
-            if(j.success) { window.updateImageManual(j.data.url); document.getElementById('manual-url').value = j.data.url; }
-        } catch(err) { alert("Upload Fail"); }
-    };
-</script>
-
-
-</body></html>
+</body>
+</html>
